[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://TimePickup.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="Player" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="TimeLabel" type="Label" parent="UI"]
margin_right = 40.0
margin_bottom = 14.0
text = "Time: 30.0"

[node name="GameOverLabel" type="Label" parent="UI"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "Game Over!"

[node name="TimePickup" parent="." instance=ExtResource( 3 )]
position = Vector2( 106, -41 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
